[package]
name = "rs_multer"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.7.7", features = ["multipart"]}
serde = "1.0.210"
serde_json = "1.0.128"
tokio = {version = "1.40.0", features = ["full"]}
tower = "0.5.1"
tower-http = {version = "0.6.1", features = ["fs"]}
multer= {path="./multer"}